--- a/misc.html
+++ b/misc.html
@@ -47,7 +47,7 @@ title: Misc
         <polygon points="5,19 7,16 10,17 9,20"/>
         <polygon points="5,5 9,4 10,7 7,8"/>
       </svg>
-      <h3>Football</h3>
+      <h3>Football (Soccer)</h3>
       <p>The beautiful game ⚽</p>
     </div>
 
@@ -124,7 +124,7 @@ title: Misc
         <circle cx="12" cy="17" r="0.5" fill="currentColor"/>
       </svg>
       <h3>Something else?</h3>
-      <p>Always exploring new interests</p>
+      <p>Life</p>
     </div>
   </div>
 
