--- a/service.html
+++ b/service.html
@@ -37,6 +37,7 @@ title: Service
         <li>Pattern Recognition</li>
         <li>IEEE TCSVT</li>
         <li>Transactions on Machine Learning Research (TMLR)</li>
+        <li>Scientific Reports</li>
       </ul>
     </div>
 
@@ -48,7 +49,7 @@ title: Service
       <ul>
         <li>NeurIPS, ICML, ICLR</li>
         <li>CVPR, ECCV, ICCV</li>
-        <li>ICRA, AAAI</li>
+        <li>ICRA, IROS, AAAI</li>
         <li>ACCV, WACV</li>
       </ul>
     </div>
