--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
         <p class="subtitle">Robotics Researcher at Apple</p>
 
         <p>
-          I'm a Robotics Researcher at <strong>Apple</strong>. I received my Ph.D. in Electrical and Computer Engineering from <strong>Carnegie Mellon University</strong>, where I was advised by <a href="https://www.ri.cmu.edu/ri-faculty/changliu-liu/">Prof. Changliu Liu</a> in the Robotics Institute.
+          I'm a Robotics Researcher at <strong>Apple</strong>. I received my Ph.D. in Electrical and Computer Engineering from <a href="https://www.cmu.edu/"><strong>Carnegie Mellon University</strong></a>, where I was advised by <a href="https://www.ri.cmu.edu/ri-faculty/changliu-liu/">Prof. Changliu Liu</a> in the Robotics Institute.
         </p>
 
         <p>
