--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@ layout: default
         <p class="subtitle">Robotics Researcher at Apple</p>
 
         <p>
-          I'm a Robotics Researcher at <strong>Apple</strong>. I received my Ph.D. in Electrical and Computer Engineering from <a href="https://www.cmu.edu/"><strong>Carnegie Mellon University</strong></a>, where I was advised by <a href="https://www.ri.cmu.edu/ri-faculty/changliu-liu/">Prof. Changliu Liu</a> in the Robotics Institute.
+          I'm a Robotics Researcher at <strong>Apple</strong>. I received my Ph.D. in Electrical and Computer Engineering from <a href="https://www.cmu.edu/">Carnegie Mellon University</a>, where I was advised by <a href="https://www.ri.cmu.edu/ri-faculty/changliu-liu/">Prof. Changliu Liu</a> in the Robotics Institute.
         </p>
 
         <p>
-          My research focuses on <strong>lifelong robot learning</strong> at the intersection of machine learning and robotics (Embodied AI)—building intelligent systems that learn continuously from experience, adapt efficiently to new tasks, and operate safely alongside humans. I'm particularly interested in robot learning, continual learning, data-efficient adaptation, and safe human-robot collaboration.
+          My research focuses on lifelong robot learning at the intersection of machine learning and robotics (Embodied AI)—building intelligent systems that learn continuously from experience, adapt efficiently to new tasks, and operate safely alongside humans. I'm particularly interested in robot learning, continual learning, data-efficient adaptation, and safe human-robot collaboration.
         </p>
 
         <p>
